# chacana

./: .gitignore  .vale.ini  404.html  AGENTS.md  CLAUDE.md  README.md  _typos.toml  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.beads/: .gitignore  interactions.jsonl  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml
.wai/: config.toml
api/: index.html
api/ast/: index.html
api/checker/: index.html
api/context/: index.html
api/errors/: index.html
api/grammar/: index.html
api/visitor/: index.html
assets/wasm/: tree-sitter-chacana.wasm
development/: index.html
docs/: development.md  index.md  playground.md
docs/api/: ast.md  checker.md  context.md  errors.md  grammar.md  index.md  latex.md  visitor.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: context.md  diffgeom.md  editor-support.md  expressions.md  type-checking.md
examples/: basic.toml
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/context/: index.html
guide/diffgeom/: index.html
guide/editor-support/: index.html
openspec/: project.md
playground/: index.html
search/: search_index.json
tests/: conftest.py  helpers.py  test_ast.py  test_checker.py  test_cli.py  test_context.py  test_diffgeom.py  test_grammar.py  test_indices.py  test_integration.py  test_latex.py  test_visitor.py
tree-sitter-chacana/: .gitignore  grammar.js  package-lock.json  package.json  tree-sitter.json
vscode-chacana/: esbuild.mjs  language-configuration.json  package-lock.json  package.json
(+83 files in other folders)
