[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chacana"
version = "0.1.0"
description = "A tensor calculus DSL with static type checking"
requires-python = ">=3.10"
dependencies = [
    "arpeggio>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chacana"]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["chacana"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["chacana"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "arpeggio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
